Bug 1853209: Remove the content attribute when a JS ARIA attribute is set to null. r=edgar, a=dmeehan

Differential Revision: https://phabricator.services.mozilla.com/D190751